--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         // IMPORTANT: Replace this placeholder with your actual UID.
         // Get your UID by signing in and checking the 'userId' stored internally,
         // or finding it in your Firebase Console Authentication tab.
-        const ADMIN_UID = "YOUR_ADMIN_UID_HERE"; 
+        const ADMIN_UID = "wbYCW38eIDdIG346AesLRqdAX6k1"; 
         
         // Use environment variables if they exist, otherwise fall back to the hardcoded config
         const envAppId = typeof __app_id !== 'undefined' ? __app_id : FIREBASE_CONFIG.projectId;
