--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <script type="module">
         // --- 1. CONFIGURATION (MUST BE UPDATED BY USER) ---
         
-        // **IMPORTANT**: REPLACE 'ADMIN_UID_REQUIRED_HERE' with your actual Firebase User ID (UID).
-        const ADMIN_UID = "ADMIN_UID_REQUIRED_HERE";
+        // **IMPORTANT**: This UID is used to identify the administrator who can approve/reject requests.
+        const ADMIN_UID = "wbYCW38eIDdIG346AesLRqdAX6k1";
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
